--- a/laba3TP/MainWindow.xaml
+++ b/laba3TP/MainWindow.xaml
@@ -3,10 +3,39 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
         xmlns:local="clr-namespace:laba3TP"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="Анализ статистики" Height="450" Width="800">
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
+
+        <!-- Панель с кнопками -->
+        <StackPanel Orientation="Horizontal" Margin="10">
+            <Button x:Name="SalaryButton" Content="Анализ зарплат" Width="150" Margin="5" Click="SalaryButton_Click"/>
+            <Button x:Name="InflationButton" Content="Анализ инфляции" Width="150" Margin="5" Click="InflationButton_Click"/>
+        </StackPanel>
+
+        <!-- Таблица для данных -->
+        <DataGrid x:Name="DataTable" 
+          Grid.Row="1" 
+          Margin="10,10,0,10" 
+          Width="180"
+          HorizontalAlignment="Left"
+          AutoGenerateColumns="True" 
+          IsReadOnly="True"/>
+        <!-- График -->
+        <lvc:CartesianChart x:Name="SalaryChart" Grid.Row="1" Margin="195,10,10,10">
+            <lvc:CartesianChart.AxisX>
+                <lvc:Axis Title="Год"/>
+            </lvc:CartesianChart.AxisX>
+            <lvc:CartesianChart.AxisY>
+                <lvc:Axis Title="Значение"/>
+            </lvc:CartesianChart.AxisY>
+        </lvc:CartesianChart>
     </Grid>
 </Window>
